--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -23,6 +23,15 @@
   "prettier.tslintIntegration": true,
   "prettier.disableLanguages": ["html"],
   "workbench.colorCustomizations": {
+    "liveServer.settings.port": 5002,
+    "liveServer.settings.CustomBrowser": "chrome",
+    "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome --incognito --remote-debugging-port=9222",
+    "liveServer.settings.NoBrowser": false,
+    "liveServer.settings.ignoreFiles": [
+      ".vscode/**",
+      "**/*.scss",
+      "**/*.sass"
+    ],
     "activityBar.background": "#ef0d17",
     "activityBar.foreground": "#e7e7e7",
     "activityBar.inactiveForeground": "#e7e7e799",
@@ -34,16 +43,6 @@
     "titleBar.inactiveForeground": "#e7e7e799",
     "statusBar.background": "#bf0a12",
     "statusBarItem.hoverBackground": "#ef0d17",
-    "statusBar.foreground": "#e7e7e7",
-    "liveServer.settings.port": 5002,
-    "liveServer.settings.CustomBrowser" : "chrome",
-    "liveServer.settings.AdvanceCustomBrowserCmdLine": "chrome --incognito --remote-debugging-port=9222",
-    "liveServer.settings.NoBrowser" : false,
-    "liveServer.settings.ignoreFiles" : [
-            ".vscode/**",
-            "**/*.scss",
-            "**/*.sass"
-    ]
-
-}
+    "statusBar.foreground": "#e7e7e7"
+  }
 }
