--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "npm run standardize && ng serve --port 5001 -o",
     "build": "npm run standardize && ng build --prod",
     "test": "ng test",
+    "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
     "e2e": "ng e2e",
     "predocker:build": "npm run build -- --prod --output-path dist && npm test -- --watch=false && npm run e2e",
