--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "ng": "ng",
     "start": "npm run standardize && ng serve --port 5001 -o",
     "build": "npm run standardize && ng build --prod",
+    "build:ci": "docker build -f Dockerfile.integration . t $npm_package_config_imageRepo:latest",
     "test": "ng test",
     "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
@@ -68,6 +69,7 @@
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
+    "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
     "prettier": "^1.18.2",
