--- a/src/app/Dockerfile.integration
+++ b/src/app/Dockerfile.integration
@@ -18,15 +18,15 @@ RUN npm run $BUILD_SCRIPT
 
 FROM slapers/alpine-node-chromium as tester
 ENV BUILDER_SRC_DIR /usr/src
-ENV SRC_DIR /usr/src
+ENV SRC_DIR /usr/SRC_DIR
 ENV TEST_SCRIPT test:prod
 
 RUN mkdir -p $SRC_DIR
 WORKDIR $SRC_DIR
+
 COPY --from=builder $BUILDER_SRC_DIR $SRC_DIR
 
-RUN npm run $TEST_SCRIPT
-# RUN npm run $TEST_SCRIPT:e2e
+CMD 'npm run $TEST_SCRIPT'
 
 FROM duluca/minimal-nginx-web-server:1.13.8-alpine
 ENV BUILDER_SRC_DIR /usr/src
