--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "npm run standardize && ng serve --port 5001 -o",
     "build": "npm run standardize && ng build --prod",
     "build:prod": "ng build --prod",
-    "build:ci": "docker build -f Dockerfile.integration . t $npm_package_config_imageRepo:latest",
+    "build:ci": "docker build -f Dockerfile.integration . -t $npm_package_config_imageRepo:latest",
     "test": "ng test",
     "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
