changed core server

--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "npm run standardize && ng build --prod",
     "build:prod": "ng build --prod",
     "build:ci": "docker build -f Dockerfile.integration . -t $npm_package_config_imageRepo:latest",
-    "test": "ng test",
+    "test": "ng test --browsers Chrome",
     "codecover": "npx ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "test:prod": "npm test -- --watch=false",
     "lint": "ng lint",
