--- a/.vscode/extensions.json
+++ b/.vscode/extensions.json
@@ -8,6 +8,11 @@
     "amatiasq.sort-imports",
     "DSKWRK.vscode-generate-getter-setter",
     "esbenp.prettier-vscode",
-    "HookyQR.beautify"
+    "HookyQR.beautify",
+    "johnpapa.vscode-peacock",
+    "ms-azuretools.vscode-docker",
+    "ms-vscode.vscode-typescript-tslint-plugin",
+    "expertly-simple.ng-evergreen",
+    "msjsdiag.debugger-for-edge"
   ]
 }
