--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "ng test --browsers Chrome",
     "codecover": "npx ng test --browsers ChromiumNoSandbox --watch=false --code-coverage",
     "test:prod": "npm test -- --watch=false",
-    "lint": "ng lint",
+    "lint": "tslint --config tslint.json --project . -e \"**/{test,polyfills}.ts\"",
     "e2e": "ng e2e",
     "predocker:build": "npm run build -- --prod --output-path dist && npm test -- --watch=false && npm run e2e",
     "docker:build": "cross-conf-env docker image build . -t $npm_package_config_imageRepo:$npm_package_version",
@@ -29,7 +29,11 @@
     "docker:open:mac": "echo Trying to launch on MacOS && sleep 2 && URL=http://localhost:$npm_package_config_imagePort && open $URL",
     "docker:debugmessage": "echo Docker Debug Completed Successfully! Hit Ctrl+C to terminate log tailing.",
     "predocker:debug": "run-s docker:build docker:run",
-    "docker:debug": "run-s -cs docker:open:win docker:open:mac docker:debugmessage docker:taillogs"
+    "docker:debug": "run-s -cs docker:open:win docker:open:mac docker:debugmessage docker:taillogs",
+    "style": "import-sort -l \"{src,tests,e2e}/**/*.ts\" && prettier --check \"{src,tests,e2e}/**/*.{*css,ts}\"",
+    "style:fix": "import-sort --write \"{src,tests,e2e}/**/*.ts\" && prettier --write \"{src,tests,e2e}/**/*.{*css,ts}\" && js-beautify \"src/**/*.html\"",
+    "lint:fix": "tslint --config tslint.json --fix --project . -e \"**/{test,polyfills}.ts\"",
+    "init:env": "init-dev-env generate-dot-env example.env -f"
   },
   "prettier": {
     "printWidth": 90,
@@ -57,7 +61,7 @@
     "zone.js": "~0.9.1"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.801.2",
+    "@angular-devkit/build-angular": "^0.803.21",
     "@angular/cli": "~8.1.2",
     "@angular/compiler-cli": "~8.1.2",
     "@angular/language-service": "~8.1.2",
@@ -65,19 +69,34 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "~8.9.4",
     "codelyzer": "^5.0.0",
+    "cross-conf-env": "^1.1.2",
     "dev-norms": "^1.7.0",
+    "init-dev-env": "^1.0.0",
     "jasmine-core": "~3.4.0",
     "jasmine-spec-reporter": "~4.2.1",
+    "js-beautify": "^1.10.2",
     "karma": "~4.1.0",
     "karma-chrome-launcher": "~2.2.0",
     "karma-coverage-istanbul-reporter": "~2.0.1",
     "karma-htmlfile-reporter": "^0.3.8",
     "karma-jasmine": "~2.0.1",
     "karma-jasmine-html-reporter": "^1.4.0",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.18.2",
     "protractor": "~5.4.0",
+    "rimraf": "^3.0.0",
     "ts-node": "~7.0.0",
     "tslint": "~5.15.0",
+    "tslint-config-prettier": "^1.18.0",
+    "tslint-etc": "^1.10.0",
+    "tslint-plugin-prettier": "^2.1.0",
     "typescript": "~3.4.3"
+  },
+  "importSort": {
+    ".ts, .tsx": {
+      "parser": "typescript",
+      "style": "module",
+      "options": {}
+    }
   }
 }
